--- a/docs/source/_static/theme_overrides.css
+++ b/docs/source/_static/theme_overrides.css
@@ -19,11 +19,25 @@
       overflow: visible !important;
    }
 
+   /* Piercecco's Workaround */
    .wy-menu p {
-      color: #55a5d9;
+      color: #66a5d9;
       height: 32px;
       line-height: 32px;
       padding: 0 1.618em;
+      margin: 12px 0 0;
+      display: block;
+      font-weight: 700;
+      text-transform: uppercase;
+      font-size: 85%;
+      white-space: nowrap;
+   }
+   /* Piercecco's Workaround */
+   .toctree-wrapper p {
+      color: #175ba9;
+      height: 32px;
+      line-height: 32px;
+      padding: 0;
       margin: 12px 0 0;
       display: block;
       font-weight: 700;
